tests/analyzer/errors/native_module2.ray
use data.cmodule.invalid_cmodule

fn main() { }
